--- a/ocr.html
+++ b/ocr.html
@@ -64,7 +64,7 @@
         }
          
         // Replace the subscriptionKey string value with your valid subscription key.
-        var subscriptionKey = "6ee3520895e84d29916db1bf8d24287e";
+        var subscriptionKey = "ENTER_YOUR_KEY_HERE";
 
         // Replace or verify the region.
         //
@@ -74,7 +74,7 @@
         //
         // NOTE: Free trial subscription keys are generated in the westcentralus region, so if you are using
         // a free trial subscription key, you should not need to change this region.
-        var uriBase = "https://southeastasia.api.cognitive.microsoft.com/vision/v1.0/ocr";
+        var uriBase = "ENTER_YOUR_LOCATION_HERE";
 
         // Request parameters.
         var params = {
@@ -135,7 +135,7 @@
         // **********************************************
 
         // Replace the subscriptionKey string value with your valid subscription key.
-        var subscriptionKey = "6ee3520895e84d29916db1bf8d24287e";
+        var subscriptionKey = "ENTER_YOUR_KEY_HERE";
 
         // Replace or verify the region.
         //
@@ -145,7 +145,7 @@
         //
         // NOTE: Free trial subscription keys are generated in the westcentralus region, so if you are using
         // a free trial subscription key, you should not need to change this region.
-        var uriBase = "https://southeastasia.api.cognitive.microsoft.com/vision/v1.0/ocr";
+        var uriBase = "ENTER_YOUR_LOCATION_HERE";
 
         // Request parameters.
         var params = {
